syntax = "proto3";

package publisher;

service PublisherService {
    rpc PublishMessage (PublishRequest) returns (PublishResponse);
}

message PublishRequest {
    string message = 1;
}

message PublishResponse {
    bool success = 1;
}